--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,6 @@ spring.data.mongodb.database=admin
 spring.data.mongodb.username=root
 spring.data.mongodb.password=newpassword
 
+logging.level.root=off
+
 server.port=8090
