--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@
 #spring.datasource.url=jdbc:mysql:///hilly?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 
 spring.data.mongodb.host=localhost
+#spring.data.mongodb.host=hillymongo
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=admin
 spring.data.mongodb.username=root
@@ -11,4 +12,4 @@ spring.data.mongodb.password=newpassword
 
 #logging.level.root=off
 
-server.port=8090
+#server.port=8090
