--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
 <!--            <version>1.1.23</version>-->
 <!--        </dependency>-->
 
+        <!-- springboot websocket -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
