--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@
 spring.data.mongodb.host=localhost
 #spring.data.mongodb.host=hillymongo
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=admin
-spring.data.mongodb.username=root
+spring.data.mongodb.database=hilly
+spring.data.mongodb.username=hilly
 spring.data.mongodb.password=newpassword
 
 logging.level.root=off
