在每次计算存储数据之前,先清空原来的数据表,这样每次计算都不会受之前的影响,并且每次查询的时候遍历数据库,将得到的数据合并成一个完整的对象传递给前端

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,12 @@ spring.data.mongodb.username=hilly
 spring.data.mongodb.password=newpassword
 
 logging.level.root=off
+spring.mvc.async.request-timeout=100000
+#restTemplate配置# 连接不共用的时候，等待连接超时。
+rest.connection.connectionRequestTimeout=30000
+#  建立连接超时
+rest.connection.connectTimeout=30000
+# 建立连接成功后 从服务器读取超时
+rest.connection.readTimeout=30000
 
 server.port=8090
