--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,13 +10,13 @@ spring.data.mongodb.database=hilly
 spring.data.mongodb.username=hilly
 spring.data.mongodb.password=newpassword
 
-logging.level.root=off
-spring.mvc.async.request-timeout=100000
-#restTemplate配置# 连接不共用的时候，等待连接超时。
-rest.connection.connectionRequestTimeout=30000
-#  建立连接超时
-rest.connection.connectTimeout=30000
-# 建立连接成功后 从服务器读取超时
-rest.connection.readTimeout=30000
+#logging.level.root=off
+#spring.mvc.async.request-timeout=100000
+##restTemplate配置# 连接不共用的时候，等待连接超时。
+#rest.connection.connectionRequestTimeout=30000
+##  建立连接超时
+#rest.connection.connectTimeout=30000
+## 建立连接成功后 从服务器读取超时
+#rest.connection.readTimeout=30000
 
 server.port=8090
