--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,11 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=hilly
 spring.data.mongodb.username=hilly
+#spring.data.mongodb.database=admin
+#spring.data.mongodb.username=root
 spring.data.mongodb.password=newpassword
 
 #logging.level.root=off
 
 server.port=8090
+#server.port=8088
