--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-#spring.datasource.username=root
-#spring.datasource.password=newpassword
-#spring.datasource.url=jdbc:mysql:///hilly?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.username=root
+spring.datasource.password=newpassword
+spring.datasource.url=jdbc:mysql:///hilly?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 
 spring.data.mongodb.host=localhost
 #spring.data.mongodb.host=hillymongo
