根据springboot自带的logback日志,设置了日志在控制台的输出级别,并加入了日志异步处理,提高性能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.data.mongodb.username=hilly
 #spring.data.mongodb.username=root
 spring.data.mongodb.password=newpassword
 
-#logging.level.root=off
+logging.level.root=INFO
 
 server.port=8090
 #server.port=8088
