--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,18 @@ services:
     # 数据持久化
     volumes:
       - /home/wangyanqing/data/hillymongodb2:/data/db
+  hillymysql:
+    image: mysql:latest
+    ports:
+      - 3308:3306
+    volumes:
+      - /home/wangyanqing/data/hillymysql/data:/var/lib/mysql
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: newpassword
+#      MYSQL_DATABASE: hilly
+#      MYSQL_USER: hilly
+#      MYSQL_PASSWORD: newpassword
   hillyrabbitmq:
     image: rabbitmq:management
     container_name: hillyrabbit
@@ -40,3 +52,4 @@ services:
     depends_on: # 依赖与mysql、redis，其实可以不填，默认已经表示可以
       - hillymongo
       - hillyrabbitmq
+      - hillymysql
