--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,9 @@ spring.data.mongodb.username=hilly
 #spring.data.mongodb.username=root
 spring.data.mongodb.password=newpassword
 
-logging.level.root=INFO
+logging.level.root=info
+logging.level.org.springframework.security=info
 
+server.servlet.context-path=/
 server.port=8090
 #server.port=8088
